Fix map width and logoLink on mobile, remove burger menu scroll

--- a/moja-aplikacja/src/components/Contact/Contact.css
+++ b/moja-aplikacja/src/components/Contact/Contact.css
@@ -40,6 +40,7 @@
         font-size: 20px;
     }
     .Map {
-        margin: 0 10px 0 10px;
+        margin: 0 20px 0 10px;
+        width: 100%
     }
 }
