--- a/moja-aplikacja/src/components/Nav/BurgerMenu.css
+++ b/moja-aplikacja/src/components/Nav/BurgerMenu.css
@@ -40,12 +40,14 @@ Note: Beware of modifying this element as it can break the animations - you shou
 .bm-menu-wrap {
     position: fixed;
     height: 100%;
+    top:75px !important;
 }
 
 /* General sidebar styles */
 .bm-menu {
     padding: 2.5em 1.5em 0;
     font-size: 1.15em;
+    overflow: hidden !important;
 }
 
 
@@ -67,4 +69,5 @@ Note: Beware of modifying this element as it can break the animations - you shou
 .bm-overlay {
     display: none;
     background: rgba(0, 0, 0, 0.3);
+    overflow: hidden;
 }
